<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/spectrumsanalysis"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button 
        android:id="@+id/first2"
        android:drawableTop="@drawable/fenxi"
        android:paddingTop="10dp"
        android:background="@drawable/fselector1"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="20dp"
        android:textSize="15sp"
        android:textColor="@color/myblack"
        android:text="@string/funcion1"/>
      <Button 
        android:id="@+id/second2"
        android:drawableTop="@drawable/cexiang"
        android:background="@drawable/fselector1"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textColor="@color/myblack"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:text="@string/funcion2"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button 
        android:id="@+id/third2"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:textColor="@color/myblack"
        android:drawableTop="@drawable/ganrao"
        android:background="@drawable/fselector1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="20dp"
        android:text="@string/funcion3"/>
      <Button 
        android:id="@+id/fourth2"
        android:drawableTop="@drawable/ditu"
        android:layout_width="100dp"
        android:textSize="15sp"
        android:textColor="@color/myblack"
        android:paddingTop="10dp"
        android:background="@drawable/fselector1"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:text="@string/funcion4"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp" 
         android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button 
        android:id="@+id/fivth2"
       android:drawableTop="@drawable/wurenzhan"
       android:background="@drawable/fselector1"
       android:paddingTop="10dp"
        android:layout_width="100dp"
        android:textColor="@color/myblack"
        android:layout_height="100dp"
        android:textSize="15sp"
        android:layout_marginRight="20dp"
        android:text="@string/funcion5"/>
        
         <Button 
        android:id="@+id/seven2"
        android:drawableTop="@drawable/liebiao"
        android:background="@drawable/fselector1"
        android:paddingTop="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/myblack"
        android:textSize="15sp"
        android:text="监测站列表"/>
      
    </LinearLayout>
    <!--  
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1">
       
        <Button 
        android:id="@+id/sixth2"
        android:drawableTop="@drawable/jihua"
        android:background="@drawable/fselector1"
        android:paddingTop="10dp"
        android:layout_width="100dp"
        android:textColor="@color/myblack"
        android:textSize="15sp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:text="@string/funcion6"/>
        
      <Button 
        android:id="@+id/eighth2"
        android:layout_width="100dp"
        android:text="干扰查找"
        android:background="@drawable/fselector1"
        android:paddingTop="10dp"
        android:layout_height="100dp"
        android:textSize="15sp"
        android:textColor="@color/myblack"
        android:layout_marginLeft="20dp"
        />
    </LinearLayout>
    -->

</LinearLayout>
